# toy_programs

./: CMakeLists.txt
0_Common/: CMakeLists.txt
0_Common/include/: math_functions_32_bit.h  misc.h  utilities.h
0_Common/src/: file_io.c  math_functions_32_bit.c  math_functions_64_bit.c  misc.c  number_converter.c  utilities.c
1_Typewriter/: CMakeLists.txt
1_Typewriter/include/: typewriter_functions.h
1_Typewriter/src/: typewriter_functions.c  typewriter_main.c
1_Vault-Tec_Terminal/: CMakeLists.txt
1_Vault-Tec_Terminal/include/: vault-tec_functions.h  vault-tec_messages.h
1_Vault-Tec_Terminal/src/: vault-tec_functions.c  vault-tec_main.c
2_SDL/: CMakeLists.txt  README.md
2_SDL/include/: sdl_functions.h
2_SDL/src/: sdl_functions.c  sdl_main.c
DSA/: CMakeLists.txt
DSA/include/: linked_list.h
DSA/src/: linked_list.c
